# UFADEVCONF25

./: .gitignore  README.md
csharp/: .gitignore  README.md  Vo.UfaDevConf.sln
csharp/src/Application/: CheckParcelFitsQuery.cs  CreatePickupPointCommand.cs  ParcelFitResult.cs  PickupPointApplicationService.cs  PickupPointNotFoundException.cs
csharp/src/Domain/: IPickupPointRepository.cs  Parcel.cs  PickupPoint.cs  Weight.cs
csharp/src/Infrastructure/: Infrastructure.csproj  Program.cs
csharp/src/Infrastructure/Properties/: launchSettings.json
csharp/tests/Domain.Tests/: Domain.Tests.csproj  PickupPointTests.cs  WeightTests.cs
go/: README.md  go.mod
go/cmd/server/: main.go
go/internal/application/: dto.go  service.go
go/internal/domain/: parcel.go  pickup_point.go  pickup_point_test.go  repository.go  weight.go  weight_test.go
go/internal/infrastructure/httpapi/: server.go
java/: README.md  build.gradle  settings.gradle
java/application/: build.gradle
java/domain/: build.gradle
java/infrastructure/: build.gradle
kotlin/: README.md  build.gradle  settings.gradle
kotlin/application/: build.gradle
kotlin/domain/: build.gradle
kotlin/infrastructure/: build.gradle
python/: .gitignore  README.md  pyproject.toml  requirements.txt
python/src/vo_ufadevconf/application/: dto.py  exceptions.py  service.py
python/src/vo_ufadevconf/domain/: parcel.py  pickup_point.py  repository.py  weight.py
python/src/vo_ufadevconf/infrastructure/: api.py  dependencies.py  main.py  repository.py
python/tests/domain/: test_pickup_point.py  test_weight.py
(+34 files in other folders)
